--- a/mxcube3/ui/css/SampleGrid.css
+++ b/mxcube3/ui/css/SampleGrid.css
@@ -1,6 +1,7 @@
 .samples-grid-item {
     width: 190px;
-    height: 90px;
+    height: auto;
+    min-height: 90px;
     border: 1px solid #AAA;
     background: #FFF;
     box-shadow: 0px 2px 3px 0px #AAA;
