--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -78,8 +78,9 @@ body {
   width: 16.66666667%;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: #222;
   padding-bottom: 140px;
+  border-right: 2px solid black;
+  background: rgba(243,243,243,.85)
 }
 
 .m-node {
@@ -88,7 +89,7 @@ body {
   }
 
   .inner {
-    color: #9d9d9d;
+    color: black;
     font-size: 12px;
     font-family: Menlo;
   }
@@ -99,7 +100,7 @@ body {
     padding: 4px 5px;
 
     &.is-active {
-      background-color: #31363F;
+      background-color: grey;
     }
   }
 }
@@ -128,3 +129,6 @@ body {
   margin-left: 5px;
 }
 
+.node-name{
+  margin-left: 4px;
+}
