--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -62,11 +62,33 @@ body {
   }
 
   .caret-right:before {
-    content: '\25B8';
+    content: "\f067";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #000;
+    font-size: 14px;
+    padding-right: 0.1em;
+    padding-left: 0.2em;
+    position: absolute;
+    top: 6px;
+    left: 0;
   }
 
   .caret-down:before {
-    content: '\25BE';
+    content: "\f068";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #000;
+    font-size: 14px;
+    padding-right: 0.1em;
+    padding-left: 0.2em;
+    position: absolute;
+    top: 6px;
+    left: 0;
   }
 }
 
@@ -80,7 +102,6 @@ body {
   overflow-y: auto;
   padding-bottom: 140px;
   border-right: 2px solid black;
-  background: rgba(243,243,243,.85)
 }
 
 .m-node {
@@ -96,9 +117,14 @@ body {
 
   .node {
     display: inline-block;
-    width: 100%;
     padding: 4px 5px;
-
+    border: 1px solid #999;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 3px 7px 0px 5px;
+    text-decoration: none;
+    margin: 3px;
+    margin-left: 7px;
     &.is-active {
       background-color: grey;
     }
@@ -131,4 +157,43 @@ body {
 
 .node-name{
   margin-left: 4px;
+}
+.node-root{
+  font-size: 16px;
+}
+
+.node-method{
+    background-color: #999999;
+    color: white;
+}
+.node-method:before{
+    border-left: 1px solid #999;
+    bottom: 50px;
+    height: 100%;
+    width: 1px;
+    content: "";
+    position: absolute;
+    top: -4px;
+    left: 9px;
+}
+
+.node-method:after {
+    border-top: 1px solid #999;
+    height: 20px;
+    top: 15px;
+    width: 8px;
+    content: "";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #000;
+    font-size: 14px;
+    padding-right: 0.1em;
+    padding-left: 0.2em;
+    position: absolute;
+    left: 9px;
+}
+.current-sample{
+  margin-left: 5px;
 }
