Refactor of queue

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -59,6 +59,7 @@ body {
     position: absolute;
     left: 0;
     cursor: pointer;
+    display: block;
   }
 
   .caret-right:before {
@@ -90,18 +91,6 @@ body {
     top: 6px;
     left: 0;
   }
-}
-
-.tree {
-  position: fixed;
-  top: 50px;
-  left: 0;
-  bottom: 0;
-  width: 16.66666667%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding-bottom: 140px;
-  border-right: 2px solid black;
 }
 
 .m-node {
@@ -201,5 +190,17 @@ body {
 .sample-search{
   margin: 5px;
   font-size: 14px;
+}
+
+.queue{
+  position: fixed;
+  top: 50px;
+  left: 0;
+  bottom: 0;
+  width: 16.66666667%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-bottom: 140px;
+  border-right: 2px solid black;
 }
 
