Added colors to represent state of method

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -152,7 +152,6 @@ body {
 }
 
 .node-method{
-    background-color: #999999;
     color: white;
 }
 .node-method:before{
@@ -203,4 +202,26 @@ body {
   padding-bottom: 140px;
   border-right: 2px solid black;
 }
+
+.passive{
+  background-color: #ADABAB;
+}
+
+.active{
+  background-color: #337ab7;
+}
+
+.success{
+  background-color: #5cb85c;
+}
+
+.error{
+  background-color: #d9534f;
+}
+
+.warning{
+  background-color: #f0ad4e;
+}
+
+
 
