Added controlls such as run/stop/pause to the queue

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -132,8 +132,8 @@ body {
   border-radius: 0px;
 }
 
-.queue-run-stop{
-  width: 50%;
+.queue-controlls{
+  width: 33%;
   border-radius: 0px;
 }
 
