--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -15,3 +15,10 @@
     width:100%; height:100%; 
     position:absolute; top:0px; left:0px;
 }
+
+.contextMenu{
+	position:absolute; 
+	top:0px; 
+	left:0px;
+	display:none;
+}
