Changed css for samplesearch

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -149,6 +149,7 @@ body {
 }
 .node-root{
   font-size: 16px;
+  width: 90%;
 }
 
 .node-method{
@@ -223,5 +224,7 @@ body {
   background-color: #f0ad4e;
 }
 
-
+.searchBox{
+  width: 100%;
+}
 
