--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -107,13 +107,15 @@ body {
   .node {
     display: inline-block;
     padding: 4px 5px;
-    border: 1px solid #999;
-    border-radius: 5px;
+    border: 1px solid #AAA;
+    border-radius: 3px;
+    box-shadow: 0px 2px 3px 0px #AAA;
     display: inline-block;
     padding: 3px 7px 0px 5px;
     text-decoration: none;
     margin: 3px;
     margin-left: 7px;
+    background-color: white;
     &.is-active {
       background-color: grey;
     }
@@ -154,6 +156,7 @@ body {
 
 .node-method{
     color: white;
+    width: 80%;
 }
 .node-method:before{
     border-left: 1px solid #999;
@@ -205,23 +208,23 @@ body {
 }
 
 .passive{
-  background-color: #ADABAB;
+  background-color: #ADABAB !important;
 }
 
 .active{
-  background-color: #337ab7;
+  background-color: #337ab7 !important;
 }
 
 .success{
-  background-color: #5cb85c;
+  background-color: #5cb85c !important;
 }
 
 .error{
-  background-color: #d9534f;
+  background-color: #d9534f !important;
 }
 
 .warning{
-  background-color: #f0ad4e;
+  background-color: #f0ad4e !important;
 }
 
 .searchBox{
