--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -1,8 +1,9 @@
 .outsideWrapper{ 
-    width:60%; height:auto;  
-    margin:20px 60px; 
-    border:1px solid blue;
-    margin: 0 auto; 
+    width:100%; height:auto;  
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto; 
 }
 .insideWrapper{ 
     width:100%; height:100%; 
@@ -21,4 +22,21 @@
 	top:0px; 
 	left:0px;
 	display:none;
+}
+
+.sample-controlls{
+    margin-top: 10px;
+    background-color: white;
+    border: 1px solid #AAA;
+    border-radius: 3px;
+    box-shadow: 0px 2px 3px 0px #AAA;
+}
+
+.information-box{
+    margin-top: 10px;
+    background-color: white;
+    border: 1px solid #AAA;
+    border-radius: 3px;
+    box-shadow: 0px 2px 3px 0px #AAA;
+    height: 300px;
 }
