Fixed CSS to match SampleView

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -127,6 +127,15 @@ body {
     left: 0;
     bottom: 0;
     width: 16.66666667%;
+    margin: auto;
+}
+
+.queue-box{
+    margin: 10px;
+    background-color: white;
+    border: 1px solid #AAA;
+    border-radius: 3px;
+    box-shadow: 0px 2px 3px 0px #AAA;
 }
 
 .queue-button{
@@ -135,8 +144,10 @@ body {
 }
 
 .queue-controlls{
-  width: 33%;
+  background-color: white;
   border-radius: 0px;
+  width: 33.33333%;
+
 }
 
 .tree .collapse {
