Minor name and GUI changes

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -161,6 +161,7 @@ body {
 
 .node-method{
     width: 80%;
+    font-size: 12px;
 }
 
 .current-sample{
@@ -218,6 +219,7 @@ body {
   border-bottom: 1px solid #eeeeee;
   font-size: 16px;
   margin: 10px;
+  text-align:center
 }
 
 .children{
@@ -225,5 +227,5 @@ body {
 }
 
 .m-node .children .node-method{
-  margin-left: 25px !important;
+  margin-left: 30px !important;
 }
