New way of showing sampleimage
No the canvas just sits on top of the image instead of rendering it

--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -47,3 +47,14 @@
 .divider{
     margin-bottom: 0px;
 }
+
+.canvas-container{
+    position:relative;
+    z-index:20;
+}
+
+.img{
+    position:absolute;
+    z-index:1;
+    text-align: left;
+}
