--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -4,22 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-}
-
-.inspector {
-  margin-left: 400px;
-
-  pre {
-    font-family: Menlo;
-    font-size: 13px;
-  }
-}
-
-
 .f-no-select {
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -34,104 +18,29 @@ body {
   .f-no-select;
 }
 
-.m-draggable {
-  position: absolute;
-  opacity: 0.8;
-  .f-no-select;
-}
 
-.m-node {
-  &.placeholder > * {
-    visibility: hidden;
-  }
-
-  &.placeholder {
-    border: 1px dashed #ccc;
-  }
-
-  .inner {
-    position: relative;
-    cursor: pointer;
-  }
-
-  .collapse {
-    position: absolute;
-    right: 20px;
-    top: 0px;
-    cursor: pointer;
-    display: block;
-    content: "Hello world";
-  }
-
-  .caret-right:before {
-    content: "\f107";
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    color: #000;
-    font-size: 18px;
-    position: absolute;
-  }
-
-  .caret-down:before {
-    content: "\f106";
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    color: #000;
-    font-size: 18px;
-    position: absolute;
-  }
-}
-
-.m-node {
-  &.placeholder {
-    border: 1px dashed #1385e5;
-  }
-
-  .inner {
-    color: black;
-    font-size: 12px;
-    font-family: Menlo;
-  }
-
-  .node {
-    display: inline-block;
-    padding: 4px 5px;
-    display: inline-block;
-    padding: 3px 7px 0px 5px;
-    text-decoration: none;
-    margin: 3px;
-    margin-left: 7px;
-    background-color: white;
-    &.is-active {
-      background-color: grey;
-    }
-  }
-}
-
-.footer-buttons {
+.queue-head{
     position: fixed;
+    top: 60px;
     left: 0;
-    bottom: 0;
     width: 16.66666667%;
-    margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 5px;
 }
 
-.queue-box{
-    margin: 10px;
-    background-color: white;
-    border: 1px solid #AAA;
-    border-radius: 3px;
-    box-shadow: 0px 2px 3px 0px #AAA;
+.queue-body{
+  position: fixed;
+  top: 105px;
+  left: 0;
+  bottom: 0;
+  width: 16.66666667%;
+  overflow-x: hidden;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 15px;
 }
 
-.queue-button{
-  width: 100%;
-  border-radius: 0px;
-}
 
 .queue-controlls{
   background-color: white;
@@ -140,9 +49,6 @@ body {
 
 }
 
-.tree .collapse {
-    display: block;
-}
 .fa{
   margin-left: 5px;
 }
@@ -157,26 +63,20 @@ body {
 
 .node-sample{
     font-size: 14px;
+    padding: 0.5rem 1rem;
+    margin-bottom: .5rem;
+    background-color: white;
 }
 
 .node-method{
     width: 80%;
     font-size: 12px;
+    margin-top: 5px;
+    margin-left: 20px;
 }
 
 .current-sample{
   margin-left: 5px;
-}
-
-.queue{
-  position: fixed;
-  top: 60px;
-  left: 0;
-  bottom: 0;
-  width: 16.66666667%;
-  overflow-x: hidden;
-  overflow-y:scroll;
-  margin-bottom: 180px;
 }
 
 .passive{
@@ -209,25 +109,13 @@ body {
     border: 1px solid #AAA;
     border-radius: 3px;
     box-shadow: 0px 2px 3px 0px #AAA;
+    padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .queue-root{
-  border-bottom-color: rgb(238, 238, 238);
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom: 1px solid #eeeeee;
   font-size: 16px;
   margin: 10px;
-  text-align:center
-}
-
-.children{
-  padding-left: 0px !important;
-}
-
-.m-node .children .node-method{
-  margin-left: 30px !important;
 }
 
 ::-webkit-scrollbar {
@@ -238,4 +126,23 @@ body {
     border-radius: 4px;
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+
+.current-sample-controls{
+  margin-right:15px;
+}
+
+.queue-divider{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+}
+
+.list-head{
+  padding: 0.5rem 1rem;
+}
+
+#search-queue{
+
 }
