Add beam info to canvas

--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -69,3 +69,23 @@
 .motor-button{
     margin: 15px !important;
 }
+
+#light-control{
+    display: inline;
+    width: auto;
+    position: relative;
+    top: 3px;
+    background: #1d2e38;
+}
+
+#zoom-control{
+    display: inline;
+    width: auto;
+    position: relative;
+    top: 3px;
+    background: #1d2e38;
+}
+
+.light-on{
+    color:orange;
+}
