--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -79,6 +79,12 @@
   margin-left: 5px;
 }
 
+.queue{
+  height: 100vh;
+  overflow-y: auto;
+  z-index: 1;
+}
+
 .passive{
   background-color: #ADABAB !important;
 }
@@ -128,7 +134,6 @@
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
-
 .current-sample-controls{
   margin-right:15px;
 }
@@ -146,3 +151,4 @@
 .centring-method{
   margin-right:10px;
 }
+
