Get modal over new navbar

--- a/mxcube3/ui/components/Main.css
+++ b/mxcube3/ui/components/Main.css
@@ -22,3 +22,7 @@ input[type="radio"], input[type="checkbox"] {
     margin-top: 1px \9;
     line-height: normal;
 }
+
+.ReactModal__Overlay{
+  z-index: 2;
+}
