New way of showing slider for zoom

--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -79,13 +79,31 @@
 }
 
 #zoom-control{
-    display: inline;
     width: auto;
-    position: relative;
-    top: 3px;
     background: #1d2e38;
+    display: none;
+    -webkit-transform:rotate(90deg);       
+    -moz-transform:rotate(90deg);
+    -o-transform:rotate(90deg);
+    -ms-transform:rotate(90deg);
+    transform:rotate(90deg);
 }
 
 .light-on{
     color:orange;
 }
+
+#zoom-button:hover  #zoom-control {
+    display: block;
+    position: absolute;
+    top: -40px;
+    left: 0px;
+    background-color: white;
+}
+
+#zoom-button{
+    position: relative;
+}
+
+
+
