removed bug with clickcentring
Before a user could keep on sending clicks after a centring was done, this generated error messages from the server.

--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -90,11 +90,9 @@
     background-color: white;
 }
 
-.light-on{
+.button-active{
     color:orange;
 }
-
-
 
 .light-button{
      position: relative;
