Third implementation of manual mount
Designed after feedback from Jie

--- a/mxcube3/ui/components/Main.css
+++ b/mxcube3/ui/components/Main.css
@@ -26,3 +26,7 @@ input[type="radio"], input[type="checkbox"] {
 .ReactModal__Overlay{
   z-index: 2;
 }
+
+.main-content{
+    padding-top: 10px;
+}
