--- a/mxcube3/ui/containers/beamline_setup_container.css
+++ b/mxcube3/ui/containers/beamline_setup_container.css
@@ -1,16 +1,24 @@
-.top5 { margin-top:5px; }
-.top7 { margin-top:7px; }
-.top10 { margin-top:10px; }
-.top15 { margin-top:15px; }
-.top17 { margin-top:17px; }
-.top30 { margin-top:30px; }
-
 .beamline-setup-container{
   margin-bottom: 10px;
   padding: 17px;
   border: 1px solid #ccc;
 }
 
-.beamline-setup-container .form-horizontal .control-label{
-  text-align:left;
+.beamline-setup-container table{
+  border-collapse: separate;
+  border-spacing: 0 1rem;
+  table-layout: fixed;
 }
+
+.property-input-label{ 
+  display: inline-block;
+  min-width: 90px;
+  margin-right: 1rem;
+  text-align: right;
+}
+
+.property-input-value{
+  display: inline-block;
+  min-width: 70px;
+}
+
