Implemented a more customizable overlay input removing the need for x-editable, This will make it easier to display custom information while an operation is in progress. This custom information could for instance be graphs (ie for energy).

--- a/mxcube3/ui/containers/beamline_setup_container.css
+++ b/mxcube3/ui/containers/beamline_setup_container.css
@@ -22,3 +22,10 @@
   min-width: 70px;
 }
 
+
+.property-input-loading{ 
+  background-image: url(./busy.gif);
+  width: 32px;
+  height: 32px;
+  margin:auto;
+}
