--- a/mxcube3/ui/components/PopInput/style.css
+++ b/mxcube3/ui/components/PopInput/style.css
@@ -25,15 +25,17 @@
   display: inline;
 }
 
-.value-label-enter-success {
+
+.value-label-enter-loading {
   background-color: #FF0;
 }
 
-.value-label-leave-success{
+.value-label-enter-success{
   transition: background-color 1000ms ease-out;
 }
 
 .value-label-enter-error{
+  color: #000;
   background-color: #F66;
   transition: background-color 1000ms ease-in;
 }
