--- a/mxcube3/ui/components/Main.css
+++ b/mxcube3/ui/components/Main.css
@@ -30,3 +30,18 @@ input[type="radio"], input[type="checkbox"] {
 .main-content{
     padding-top: 10px;
 }
+
+
+@media all and (min-width: 1400px) { /* screen size until 1200px */
+    body {
+        font-size: 14px; 
+    }
+}
+@media all and (max-width: 1400px) { /* screen size until 1200px */
+    body {
+        font-size: 10px; 
+    }
+    .fa.fa-2x{
+        font-size: 1.0em;
+    }
+}
