--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -20,24 +20,11 @@
 
 
 .queue-head{
-    position: fixed;
-    top: 63px;
-    left: 0;
-    width: 16.66666667%;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 5px;
+    margin-top: 15px;
 }
 
 .queue-body{
-  position: fixed;
-  top: 105px;
-  left: 0;
-  bottom: 0;
-  width: 16.66666667%;
   overflow-x: hidden;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-bottom: 15px;
 }
 
