--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -118,6 +118,27 @@
 }
 
 
+.task-title-head{
+    width: 100%; 
+    height: 12px; 
+    border-bottom: 1px 
+    solid black; 
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.task-title-body{
+    font-size: 16px; 
+    background-color: white; 
+    padding: 0 10px;
+}
+
+
+.sample-controll.active{
+    color: orange !important;
+    background-color: transparent !important;
+}
+
 
 .overlay-box{
     position: absolute;
