--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -122,7 +122,7 @@
     width: 100%; 
     height: 12px; 
     border-bottom: 1px 
-    solid black; 
+    solid #E5E5E5; 
     text-align: center;
     margin-bottom: 25px;
 }
@@ -133,6 +133,10 @@
     padding: 0 10px;
 }
 
+
+.modal-header {
+    border-bottom: none;
+}
 
 .sample-controll.active{
     color: orange !important;
