--- a/mxcube3/ui/components/SampleGrid/SampleGrid.css
+++ b/mxcube3/ui/components/SampleGrid/SampleGrid.css
@@ -1,17 +1,26 @@
+.samples-grid{ 
+  height: 66vh !important;
+  overflow-y: auto;
+}
+
 .samples-grid-item {
     width: 190px;
-    height: auto;
-    min-height: 100px;
+    height: 130px;
     border: 1px solid #AAA;
     background: #FFF;
-    box-shadow: 0px 2px 3px 0px #AAA;
     padding: 5px;
-    margin-top: 5px;
-    margin-right: 3px;
-    margin-bottom: 5px;
-    overflow: hidden;
+    margin-top: 2px;
+    margin-right: 4px;
+    margin-bottom: 2px;
     border-radius: 3px;
 }
+
+.samples-grid-item-tasks {
+    width: 180px;
+    height: 60px;
+    overflow-y: auto;
+}
+
 .protein-acronym {
     font-size: small;
     font-weight: bold;
