Styled tooltip popover so that it matches the style of the menu

--- a/mxcube3/ui/components/MXNavbar/MXNavbar.css
+++ b/mxcube3/ui/components/MXNavbar/MXNavbar.css
@@ -17,6 +17,18 @@
 }
 
 
-.main-menu-icon{
+.main-menu-icon {
    width: 100%;
+}
+
+
+.main-menu-tooltip.popover { 
+  background-color: #222;
+  color: #CCC;
+  font-weight: bold;
+}
+
+
+.main-menu-tooltip.popover.right > .arrow:after {
+  border-right-color: #222;
 }
