--- a/mxcube3/ui/components/SampleGrid/SampleGrid.css
+++ b/mxcube3/ui/components/SampleGrid/SampleGrid.css
@@ -161,13 +161,15 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 32px;
-  height: 32px;
-  margin-top: -16px;
-  margin-left: -16px;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
   text-align: center;
-  line-height: 32px;
-  font-size: 12px;
-  border: 1px solid #AAA;
-  border-radius: 15px;
+  line-height:40px;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 40px;
+  color: #222;
+  opacity: 0.2;
 }
