--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -40,6 +40,7 @@
 
 .node-name{
   margin-left: 4px;
+  cursor: pointer;
 }
 .node-root{
   font-size: 16px;
@@ -144,5 +145,11 @@
 .node-task{
     margin-left: 20px;
     margin-bottom: 2px;
+}
+
+.task-controlls{
+  cursor: pointer;
+  font-size: 17px !important;
+  margin-left: 7px;
 }
 
