--- a/mxcube3/ui/components/SampleView/motor.css
+++ b/mxcube3/ui/components/SampleView/motor.css
@@ -1,7 +1,12 @@
+.motor-input-container{
+    padding-right: 0px;
+}
+
 .motor-name{
     font-size: 1.0em;
     margin-bottom: 0px;
     font-weight: bold;
+    line-height: 3;
 }
 
 .motor-value{
