--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -49,9 +49,9 @@
 
 .node-sample{
     font-size: 1em;
-    padding: 0.5rem 1rem;
     margin-bottom: .5rem;
     background-color: white;
+    border: 1px dashed black;
 }
 
 .node-method{
@@ -154,3 +154,25 @@
   color: black;
 }
 
+.task-head{
+  p {
+    margin: 0 0 0px;
+  }
+  padding: 0.5rem 1rem;
+}
+
+.task-body{
+  margin-top: 10px;
+  padding: 0.5rem 1rem;
+
+}
+
+.task-body label{
+  font-weight: bold;
+}
+
+.task-body button{
+  font-weight: bold;
+  border-radius: 0px;
+  width: 33%;
+}
