--- a/mxcube3/ui/components/SampleView/motor.css
+++ b/mxcube3/ui/components/SampleView/motor.css
@@ -49,7 +49,6 @@
     border-top-right-radius: 0px;
 }
 
-
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none;
@@ -58,6 +57,14 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0; 
 }
 
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
 .rw-combobox, .rw-datetimepicker, .rw-numberpicker, .rw-dropdownlist {
     padding-right: 1.9em;
 }
