--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -51,7 +51,7 @@
     font-size: 1em;
     margin-bottom: .5rem;
     background-color: white;
-    border: 1px dashed black;
+    border: 1px solid #EEE;
 }
 
 .node-method{
@@ -75,20 +75,21 @@
   background-color: #ADABAB !important;
 }
 
+
 .active{
   background-color: #337ab7 !important;
 }
 
 .success{
-  background-color: #5cb85c !important;
+  background-color: #9BCE7B !important;
 }
 
 .error{
-  background-color: #d9534f !important;
+  background-color: #FF9999 !important;
 }
 
 .warning{
-  background-color: #f0ad4e !important;
+  background-color: #FF9900 !important;
 }
 
 .searchBox{
@@ -100,7 +101,6 @@
     background-color: white;
     border: 1px solid #AAA;
     border-radius: 3px;
-    box-shadow: 0px 2px 3px 0px #AAA;
     padding-top: 10px;
     padding-bottom: 10px;
 }
