--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -173,3 +173,16 @@
     color: #1d26ab;
   }
 }
+
+.left{
+    display: table-cell;
+    min-width: 220px;
+}
+.right{
+    display: table-cell;
+    width: 100%;
+    vertical-align: top;
+    .progress{
+      margin-top: 6px;
+    }
+}
