--- a/mxcube3/ui/components/MXNavbar/MXNavbar.css
+++ b/mxcube3/ui/components/MXNavbar/MXNavbar.css
@@ -1,24 +1,25 @@
 .main-menu-logo {
-	width: 55%;
-	height: auto;
+  width: 55%;
+  height: auto;
 }
 
 
 .main-menu-breaker {
-	margin-top: 4px;
+  margin-top: 4px;
   border-top: 1px solid #615F5F;
 }
 
 
-.main-menu-bottom-icon {
-  dispaly: block;
+.main-menu-bottom {
+  width: 100%;
   position: absolute;
   bottom: 5px;
 }
 
 
-.main-menu-icon {
+.main-menu-icons {
    width: 100%;
+   height: 100%;
 }
 
 
@@ -32,3 +33,4 @@
 .main-menu-tooltip.popover.right > .arrow:after {
   border-right-color: #222;
 }
+
