--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -1,3 +1,4 @@
+
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -24,6 +25,8 @@
 }
 
 .queue-body{
+  margin-top: 10px;
+  padding-top: 0px;
   overflow-x: hidden;
   margin-bottom: 15px;
 }
@@ -51,7 +54,9 @@
     font-size: 1em;
     margin-bottom: .5rem;
     background-color: white;
-    border: 1px dashed black;
+    border: 1px solid #AAA;
+    border-radius: 2px;
+    box-shadow: 0px 1px 2px 0px #AAA;
 }
 
 .node-method{
@@ -96,13 +101,10 @@
 }
 
 .m-tree{
-    margin-top: 10px;
     background-color: white;
     border: 1px solid #AAA;
     border-radius: 3px;
     box-shadow: 0px 2px 3px 0px #AAA;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .queue-root{
@@ -185,11 +187,6 @@
     .progress{
       margin-top: 6px;
     }
-}
-
-.node-todo.node-sample{
-      border-style: solid;
-    border-width: 2px;
 }
 
 .todo-body{
