--- a/mxcube3/ui/components/SampleView/motor.css
+++ b/mxcube3/ui/components/SampleView/motor.css
@@ -190,3 +190,25 @@ input::-webkit-inner-spin-button {
 .rw-i-caret-down:before {
     content: '\f0d7';
 }
+.bs-glyphicons-list {
+    padding-left: 0;
+    list-style: none;
+    margin: auto;
+}
+
+.bs-glyphicons-list li {
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 10px;
+    line-height: 1.4;
+    text-align: center;
+    border: 1px solid #fff;
+}
+
+.sample-controll{
+    margin-left:0px !important;
+}
+.sample-controll-label{
+    display: block;
+}
