--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -24,11 +24,19 @@
 }
 
 .sample-controlls{
-    background-color: white;
-    border: 1px solid #AAA;
+    opacity: 0.2;
+    background-color: transparent;
     border-radius: 3px;
-    box-shadow: 0px 2px 3px 0px #AAA;
-    overflow: auto
+    z-index: 1000;
+}
+
+.sample-controlls:hover{
+    opacity: 1;
+    transition: opacity .25s ease-in;
+}
+
+.sample-controlls li{
+    border: 0px !important;
 }
 
 .sample-controlls-bottom{
@@ -110,6 +118,20 @@
 .sample-controll.active{
     color: orange !important;
     background-color: transparent !important;
+}
+
+.sample-controll{
+    font-size: 2.5em !important;
+    border: 0px !important;
+    color: #33BEFF !important;
+    background-color: transparent !important;
+    padding-bottom: 0px !important;
+}
+
+.sample-controll-label {
+    font-size: 1.1em !important;
+    font-weight: bold;
+    color: #33BEFF !important;
 }
 
 
