--- a/mxcube3/ui/components/SampleView/SampleView.css
+++ b/mxcube3/ui/components/SampleView/SampleView.css
@@ -24,7 +24,7 @@
 }
 
 .sample-controlls{
-    opacity: 0.2;
+    opacity: 0.4;
     background-color: transparent;
     border-radius: 3px;
     z-index: 1000;
@@ -32,7 +32,7 @@
 
 .sample-controlls:hover{
     opacity: 1;
-    transition: opacity .25s ease-in;
+    transition: opacity .3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
 }
 
 .sample-controlls li{
@@ -145,9 +145,9 @@
 }
 
 .overlay-arrow{
-    top: -11px;
-    border-width: 5px;
-        left: 50%;
+  top: -11px;
+  border-width: 5px;
+  left: 50%;
   position: absolute;
   width: 0; 
   height: 0;
