--- a/mxcube3/ui/containers/beamline_setup_container.css
+++ b/mxcube3/ui/containers/beamline_setup_container.css
@@ -8,3 +8,9 @@
   table-layout: fixed;
 }
 
+.topbar { 
+  alignItems: stretch; 
+  display: flex; 
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  border-bottom: 1px solid rgb(174, 165, 165);
+}
