--- a/mxcube3/ui/components/MXNavbar/MXNavbar.css
+++ b/mxcube3/ui/components/MXNavbar/MXNavbar.css
@@ -1,3 +1,31 @@
+.navbar {
+  z-index: 1;
+  background: url(../../img/navbar-bg-texture.png), linear-gradient(to bottom, rgba(32,32,32,0.80) 0%, rgba(32,32,32,1) 100%);
+  margin-bottom: 0px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.80);
+  border-top: 1px solid #909090;
+}
+
+.navbar-nav {
+  margin-left: 10em;
+}
+
+.navbar .container {
+  width: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+
+.navbar-brand { 
+  font-weight: bold;
+}
+
+.navbar li {
+  font-weight: bold;
+}
+
+
 .main-menu-logo {
   width: 55%;
   height: auto;
