--- a/mxcube3/ui/components/Main.css
+++ b/mxcube3/ui/components/Main.css
@@ -64,8 +64,8 @@ input[type="radio"], input[type="checkbox"] {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 65px;
+    width: 100%;
+    height: 65px;
     background-color: #222;
     border-color: #080808;
 }
