--- a/mxcube3/ui/containers/beamline_setup_container.css
+++ b/mxcube3/ui/containers/beamline_setup_container.css
@@ -11,6 +11,6 @@
 .topbar { 
   alignItems: stretch; 
   display: flex; 
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-  border-bottom: 1px solid rgb(174, 165, 165);
+  background: #EEEEF1;
+  border-bottom: 1px solid rgb(180, 180, 180);
 }
