Various fixes that needed to be done after library updates

--- a/mxcube3/ui/components/PopInput/style.css
+++ b/mxcube3/ui/components/PopInput/style.css
@@ -28,3 +28,7 @@
 .value-label-enter-success{
   transition: background-color 1000ms ease-out;
 }
+
+.popinput-input-container {
+  display: inline;
+}
