--- a/mxcube3/ui/components/SampleGrid/SampleGrid.css
+++ b/mxcube3/ui/components/SampleGrid/SampleGrid.css
@@ -1,3 +1,13 @@
+.samples-grid-container {
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.samples-grid-container form {
+  display: inline;
+}
+
 .samples-grid{ 
 }
 
