--- a/mxcube3/ui/components/SampleGrid/SampleGrid.css
+++ b/mxcube3/ui/components/SampleGrid/SampleGrid.css
@@ -231,3 +231,8 @@
     box-shadow: none;
 }
 
+#taskSummaryPopover {
+  min-width: 700px !important;
+  max-width: 700px !important; 
+  padding-bottom: 1em;
+}
