--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -150,6 +150,13 @@
 
 .list-body{
   padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 90%;
+  width: 100%;
 }
 
 .centring-method{
