fixing upcoming list

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -155,6 +155,7 @@
   position: absolute;
   overflow-y: scroll;
   overflow-x: hidden;
+  top: 10%;
   height: 90%;
   width: 100%;
 }
@@ -221,7 +222,3 @@
     }
 }
 
-.todo-body{
-    height: 239px;
-    overflow: auto;
-}
