--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -76,9 +76,6 @@
     font-size: 1em;
     margin-bottom: .5rem;
     background-color: white;
-    border: 1px solid #AAA;
-    border-radius: 2px;
-    box-shadow: 0px 1px 2px 0px #AAA;
 }
 
 .node-method{
@@ -150,7 +147,7 @@
 }
 
 .list-body{
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -181,12 +178,18 @@
     margin: 0 0 0px;
   }
   padding: 0.5rem 1rem;
+  border: 1px solid #DDD;
+  background-color: rgb(249, 249, 249);
 }
 
-.task-body{
-  margin-top: 10px;
-  padding: 0.5rem 1rem;
+.task-head:hover {
+  background-color: #EAEAEA;
+}
 
+
+.task-body{
+  margin: 0px;
+  padding: 0px;
 }
 
 .task-body label{
@@ -223,3 +226,12 @@
     }
 }
 
+.task-parameters-table {
+  padding: '0px';
+  margin: '0px';
+  font-size: 'smaller';
+}
+
+.task-parameters-table > thead {
+  color: #636363;
+}
