Increased margin for task items

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -74,7 +74,7 @@
 
 .node-sample{
     font-size: 1em;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
     background-color: white;
 }
 
@@ -147,7 +147,7 @@
 }
 
 .list-body{
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 1rem;
   display: flex;
   flex-direction: column;
   position: absolute;
