Added preliminary interface for interleaved

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -182,6 +182,11 @@
   background-color: rgb(249, 249, 249);
 }
 
+.task-head-selected {
+  background-color: #EAEAEA;
+}
+
+
 .task-head:hover {
   background-color: #EAEAEA;
 }
