--- a/mxcube3/ui/components/SampleView/motor.css
+++ b/mxcube3/ui/components/SampleView/motor.css
@@ -78,8 +78,14 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 .rw-combobox, .rw-datetimepicker, .rw-numberpicker, .rw-dropdownlist {
-    padding-right: 1.9em;
+    padding-right: 1.3em;
 }
+.rw-widget {
+    background-color: #fff;
+    border: #ccc 1px solid;
+    border-radius: 4px;
+}
+
 .rw-widget {
     background-color: #fff;
     border: #ccc 1px solid;
@@ -90,12 +96,30 @@ input::-webkit-inner-spin-button {
     position: relative;
 }
 
+.rw-widget-no-right-border {
+    border-right: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.rw-widget-no-left-border {
+    border-left: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.rw-widget-right-border {
+    border: #CCC 1px solid;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 .rw-widget > .rw-select {
     border-left: #ccc 1px solid;
 }
 .rw-select {
     position: absolute;
-    width: 1.9em;
+    width: 1.3em;
     height: 100%;
     right: 0;
     top: 0;
@@ -121,7 +145,7 @@ input::-webkit-inner-spin-button {
 .rw-input {
     color: #555555;
     height: 2.286em;
-    padding: 0.429em 0.857em;
+    padding: 0.2em 0.4em;
     background-color: #fff;
 }
 
