--- a/mxcube3/ui/components/input.css
+++ b/mxcube3/ui/components/input.css
@@ -26,3 +26,9 @@
     background-color: #FF9900 !important;
     transition: background-color 100ms ease-in;
 }
+
+
+.input-bg-default{
+    background-color: #FFF !important;
+    transition: background-color 100ms ease-in;
+}
