Changed color for  mouse over on task head when task is selected

--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -186,6 +186,9 @@
   background-color: #ADCBDA
 }
 
+.task-head-selected:hover {
+  background-color: #98b2bf !important;
+}
 
 .task-head:hover {
   background-color: #EAEAEA;
