Set of changes for SampleChanger support:    - SampleChangerMaintance support (see comments and doc in project wiki)    - state of samplechanger reflecting hardware state    - redesign of samplechanger container    - various new features (check for doc about this big commit in project Wiki)

--- a/mxcube3/ui/components/SampleChanger/SampleChanger.css
+++ b/mxcube3/ui/components/SampleChanger/SampleChanger.css
@@ -45,3 +45,21 @@
 .custom-btn-color:hover {
   color: hsl(0,0%,0%) !important;
 }
+
+.scMessage {
+  background-color: white;
+  color: blue;
+  text-weight: bold;
+  font-size: 16px;
+  align: center;
+}
+
+.abortButton {
+  background-color: #ffdddd;
+  font-weight: bold;
+}
+
+.actionHeader {
+  background-color: #eeeeee;
+  text-align: center;
+}
