--- a/mxcube3/ui/components/SampleQueue/app.less
+++ b/mxcube3/ui/components/SampleQueue/app.less
@@ -194,10 +194,12 @@
 }
 
 .uncollected {
-  backrgound-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
 
 .running {
+  background: linear-gradient(to bottom, #ffffff 0%, rgba(255, 255, 255, 0) 5%);
+  background-color: rgba(66, 138, 202, 0.8) !important;
 }
 
 .success {
